cloudian-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: cloudian
  name: cloudian
spec:
  replicas: 2
  selector:
      matchLabels:
         name: cloudian
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: cloudian
    spec:
      containers:
      - image: 10.81.1.50:5000/cloudian:0.5
        name: cloudian
        ports:
        - containerPort: 8002
        imagePullPolicy: IfNotPresent
  strategy:
     type: RollingUpdate
     rollingUpdate:
        maxUnavailable: 0
        maxSurge: 1
