customer-contract-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: customer-contract
  name: customer-contract
spec:
  replicas: 1
  selector:
      matchLabels:
          name: customer-contract
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: customer-contract
    spec:
      containers:
      - image: 10.81.1.50:5000/customer-contract:0.5
        name: customer-contract
        ports:
        - containerPort: 8003
        imagePullPolicy: IfNotPresent
  strategy:
     type: RollingUpdate
     rollingUpdate:
       maxUnavailable: 0
       maxSurge: 1
