ecs-monitoring-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: monitoring
  name: monitoring
spec:
  replicas: 2
  selector:
      matchLabels:
          name: monitoring
  template:
    metadata:
      creationTimestamp: null
      labels:
              #io.kompose.service: iam
        name: monitoring
    spec:
      containers:
      - image: 10.81.1.68:5000/monitoring:7
        name: monitoring
        ports:
        - containerPort: 8800
        imagePullPolicy: IfNotPresent
  strategy:
     type: RollingUpdate
     rollingUpdate:
       maxUnavailable: 0
       maxSurge: 1
