emailer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: emailer
  name: emailer
spec:
  replicas: 1
  selector:
      matchLabels:
          name: emailer
  template:
    metadata:
      creationTimestamp: null
      labels:
              #io.kompose.service: emailer
        name: emailer
    spec:
      containers:
      - image: 10.81.1.68:5000/emailer:0.5
        name: emailer
        ports:
        - containerPort: 8009
        imagePullPolicy: IfNotPresent
  strategy:
     type: RollingUpdate
     rollingUpdate:
       maxUnavailable: 0
       maxSurge: 1
