hystax-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: hystax
  name: hystax
spec:
  replicas: 1
  selector:
      matchLabels:
         name: hystax
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: hystax
    spec:
      containers:
      - image: 10.81.1.38:5000/middleware:0.5
        name: hystax
        ports:
        - containerPort: 8015
        imagePullPolicy: IfNotPresent
  strategy:
     type: RollingUpdate
     rollingUpdate:
       maxUnavailable: 0
       maxSurge: 1
