iam-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: iam
  name: iam
spec:
  replicas: 2
  selector:
      matchLabels:
          name: iam
  template:
    metadata:
      creationTimestamp: null
      labels:        
        name: iam
    spec:
      containers:
      - image: 10.81.1.50:5000/iam:0.5
        name: iam
        ports:
        - containerPort: 8003
        imagePullPolicy: IfNotPresent
  strategy:
     type: RollingUpdate
     rollingUpdate:
       maxUnavailable: 0
       maxSurge: 1
