jboss-keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jboss-keycloak
  labels:
    name: jboss-keycloak
    app: jboss-keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jboss-keycloak
  template:
    metadata:
      name: jboss-keycloak
      labels:
        app: jboss-keycloak
        name: jboss-keycloak
    spec:
      restartPolicy: Always
      containers:
      - name: jboss-keycloak
        image: jboss/keycloak
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
            protocol: TCP
