keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: keycloak
  name: keycloak
spec:
  replicas: 1
  selector:
      matchLabels:
          name: keycloak
  template:
    metadata:
      creationTimestamp: null
      labels:
              
        name: keycloak
    spec:
      containers:
      - image: 10.81.1.50:5000/keycloak:0.5
        name: keycloak
        ports:
        - containerPort: 8030
        imagePullPolicy: IfNotPresent
  strategy:
     type: RollingUpdate
     rollingUpdate:
       maxUnavailable: 0
       maxSurge: 1
