kms-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: kms
  name: kms
spec:
  replicas: 1
  selector:
      matchLabels:
          name: kms
  template:
    metadata:
      creationTimestamp: null
      labels:
              #io.kompose.service: iam
        name: kms
    spec:
      containers:
      - image: 10.81.1.68:5000/kms:1
        name: kms
        ports:
        - containerPort: 8010
        imagePullPolicy: IfNotPresent
  strategy:
     type: RollingUpdate
     rollingUpdate:
       maxUnavailable: 0
       maxSurge: 1
