marketplace-be-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: marketplace-be
  name: marketplace-be
spec:
  replicas: 1
  selector:
      matchLabels:
          name: marketplace-be
  template:
    metadata:
      creationTimestamp: null
      labels:
              #io.kompose.service: marketplace-be
        name: marketplace-be
    spec:
      containers:
      - image: 10.81.1.68:5000/marketplace-be:0.5
        name: marketplace-be
        ports:
        - containerPort: 9100
        imagePullPolicy: IfNotPresent
  strategy:
     type: RollingUpdate
     rollingUpdate:
       maxUnavailable: 0
       maxSurge: 1
