middleware-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: middleware
  name: middleware
spec:
  replicas: 2
  selector:
      matchLabels:
         name: middleware
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: middleware
    spec:
      containers:
      - image: 10.81.1.68:5000/middleware:0.5
        name: middleware
        ports:
        - containerPort: 8001
        imagePullPolicy: IfNotPresent
  strategy:
     type: RollingUpdate
     rollingUpdate:
       maxUnavailable: 0
       maxSurge: 1
