ms-billing-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: ms-billing
  name: ms-billing
spec:
  replicas: 1
  selector:
      matchLabels:
          name: ms-billing
  template:
    metadata:
      creationTimestamp: null
      labels:
              #io.kompose.service: iam
        name: ms-billing
    spec:
      containers:
      - image: 10.81.1.50:5000/ms-billing:1
        name: ms-billing
        ports:
        - containerPort: 8020
        imagePullPolicy: IfNotPresent
  strategy:
     type: RollingUpdate
     rollingUpdate:
       maxUnavailable: 0
       maxSurge: 1
