ms-logger-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: ms-logger
  name: ms-logger
spec:
  replicas: 2
  selector:
      matchLabels:
          name: ms-logger
  template:
    metadata:
      creationTimestamp: null
      labels:
              #io.kompose.service: iam
        name: ms-logger
    spec:
      containers:
      - image: 10.81.1.68:5000/logger:1
        name: ms-logger
        ports:
        - containerPort: 8011
        imagePullPolicy: IfNotPresent
  strategy:
     type: RollingUpdate
     rollingUpdate:
       maxUnavailable: 0
       maxSurge: 1
