ms-setting-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: ms-settings
  name: ms-settings
spec:
  replicas: 1
  selector:
      matchLabels:
          name: ms-settings
  template:
    metadata:
      creationTimestamp: null
      labels:
              #io.kompose.service: iam
        name: ms-settings
    spec:
      containers:
      - image: 10.81.1.68:5000/ms-settings:0.5
        name: ms-settings
        ports:
        - containerPort: 8005
        imagePullPolicy: IfNotPresent
  strategy:
     type: RollingUpdate
     rollingUpdate:
       maxUnavailable: 0
       maxSurge: 1
