python-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: python-app
  name: python-app
spec:
  replicas: 1
  selector:
      matchLabels:
         name: python-app
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: python-app
    spec:
      containers:
      - image: 10.81.1.68:5000/python-app:0.5
        name: python-app
        ports:
        - containerPort: 8002
        imagePullPolicy: IfNotPresent
  strategy:
     type: RollingUpdate
     rollingUpdate:
        maxUnavailable: 0
        maxSurge: 1
