report-collector-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: report-collector
  name: report-collector
spec:
  replicas: 1
  selector:
      matchLabels:
          name: report-collector
  template:
    metadata:
      creationTimestamp: null
      labels:
         name: report-collector
    spec:
      containers:
      - image: 10.81.1.68:5000/report-collector:96
        name: report-collector
        ports:
        - containerPort: 8099
        imagePullPolicy: IfNotPresent
  strategy:
     type: RollingUpdate
     rollingUpdate:
       maxUnavailable: 0
       maxSurge: 1
