reserved-ecs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: reserved-ecs
  name: reserved-ecs
spec:
  replicas: 1
  selector:
      matchLabels:
          name: reserved-ecs
  template:
    metadata:
      creationTimestamp: null
      labels:
              #io.kompose.service: reserved-ecs
        name: reserved-ecs
    spec:
      containers:
      - image: 192.168.1.182:5000/reserved-ecs:0.5
        name: reserved-ecs
        ports:
        - containerPort: 8011
        imagePullPolicy: IfNotPresent
  strategy:
     type: RollingUpdate
     rollingUpdate:
       maxUnavailable: 0
       maxSurge: 1
