trial-account-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: trial-account
  name: trial-account
spec:
  replicas: 1
  selector:
      matchLabels:
          name: trial-account
  template:
    metadata:
      creationTimestamp: null
      labels:
              #io.kompose.service: trial-account
        name: trial-account
    spec:
      containers:
      - image: 10.81.1.68:5000/trial-account:1
        name: trial-account
        ports:
        - containerPort: 8020
        imagePullPolicy: IfNotPresent
  strategy:
     type: RollingUpdate
     rollingUpdate:
       maxUnavailable: 0
       maxSurge: 1
