usage-report-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: usage-report
  name: usage-report
spec:
  replicas: 2
  selector:
      matchLabels:
          name: usage-report
  template:
    metadata:
      creationTimestamp: null
      labels:
              #io.kompose.service: iam
        name: usage-report
    spec:
      containers:
      - image: 10.81.1.68:5000/usage-report:1
        name: usage-report
        ports:
        - containerPort: 8006
        imagePullPolicy: IfNotPresent
  strategy:
     type: RollingUpdate
     rollingUpdate:
       maxUnavailable: 0
       maxSurge: 1
