webclient-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: webclient
  name: webclient
spec:
  replicas: 1
  selector:
      matchLabels:
          name: webclient
  template:
    metadata:
      creationTimestamp: null
      labels:
              #io.kompose.service: iam
        name: webclient
    spec:
      containers:
      - image: 10.81.1.50:5000/webclient:0.5
        name: webclient
        ports:
        - containerPort: 80
        imagePullPolicy: IfNotPresent
  strategy:
     type: RollingUpdate
     rollingUpdate:
       maxUnavailable: 0
       maxSurge: 1
