ntopng-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: ntopng-client
  name: ntopng-client
spec:
  ports:
  - name: "8010"
    port: 8010
    targetPort: 8010
  selector:
    name: ntopng-client
