trial-account-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: trial-account
  name: trial-account
spec:
  ports:
  - name: "8003"
    port: 8003
    targetPort: 8003
  selector:
    name: trial-account
